aks-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sysctl-daemonset
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: sysctl-daemonset
  template:
    metadata:
      labels:
        name: sysctl-daemonset
    spec:
      hostPID: true
      containers:
        - name: sysctl
          image: busybox
          command:
            ["sh", "-c", "sysctl -w vm.max_map_count=262144 && sleep infinity"]
          securityContext:
            privileged: true
